--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1588,7 +1588,7 @@ span.glyphicon.glyphicon-star-empty:hover {
     font-size: 0.9em;
     padding: 0.5em 1em;
     border: 2px solid #9E9E9E;
-    background: #9E9E9E;
+    background: #d60c0c;
     color: #fff;
     text-transform: uppercase;
     -webkit-transition: all 0.3s ease-in-out;
